# difr

./: .gitignore  README.md  pyproject.toml
difr/: openrouter_api.py  plot_classification.py  plot_token_difr_bar_plot.py  plot_token_difr_scores.py  plotting.py  token_difr_bar_plots.py  token_difr_vllm.py  vllm_config.py  vllm_verification.py
