[project]
name = "difr"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pydantic",
    "wandb",
    "tqdm",
    "pytest",
    "ipykernel",
    "pandas",
    "einops",
    "jaxtyping",
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "matplotlib>=3.9.4",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "scipy>=1.11.0",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "transformers==4.53.2",
    "torchvision==0.22.0",
    "xformers",
    "torch==2.7.0",
    "scikit-learn",
    "bitsandbytes==0.46.1",
    "vllm==0.9.2",
    "toploc==0.1.6",
    "notebook>=7.4.7",
    "plotly>=6.3.1",
    "safetensors>=0.5.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.uv]
# Only support linux x86_64 cpython
environments = [
    "implementation_name == 'cpython' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]
required-environments = [
    "implementation_name == 'cpython' and sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["difr"]

[tool.ruff]
line-length = 127
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "F722",  # Syntax error in forward annotation (jaxtyping)
    "E402",  # Module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*" = ["B018"]  # Allow bare expressions in notebooks

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["difr"]
